--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Wbudowany skaner karty (pokazuje się po kliknięciu "Karta") -->
         <div class="cardScan" id="cardScan" aria-live="polite">
           <div class="videoWrap small">
-            <video id="videoCard" playsinline autoplay muted></video>
+            <!-- <video id="videoCard" playsinline autoplay muted></video> -->
             <canvas id="canvasCard"></canvas>
           </div>
           <div class="row">
