--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         <div class="status" id="status">Wprowadź kwotę i wybierz metodę płatności.</div>
         <div class="hint" id="hint">Dostępne: Karta (zbliż), BLIK (6 cyfr), Oszołom (QR).</div>
 
-        <!-- Wbudowany skaner karty (pokazuje się po kliknięciu "Karta") -->
+        <!--
         <div class="cardScan" id="cardScan" aria-live="polite">
           <div class="videoWrap small">
-            <!-- <video id="videoCard" playsinline autoplay muted></video> -->
-            <canvas id="canvasCard"></canvas>
+            <video id="videoCard" playsinline autoplay muted></video>
+            <canvas id="canvasCard"></canvas> -->
           </div>
           <div class="row">
             <span class="badge" id="infoCard">Zasłoń obiektyw kartą/telefonem…</span>
